new update push

--- a/src/stylesheet/buttons.scss
+++ b/src/stylesheet/buttons.scss
@@ -58,15 +58,44 @@
 }
 
 .navbar {
-  .main-btn {
-    // width: 200px;
+  .main-btn-nav {
+    width: 250px;
     text-decoration: none;
-
+    font-size: 22px;
+    font-weight: 700;
+    color: var(--color-charade);
+    cursor: pointer;
+    height: 55px;
+    text-align: center;
+    border: none;
+    background-size: 200% 100%;
+  
+    border-radius: 5px;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
   }
+
+  .main-btn-nav:hover,
+.main-btn-nav:focus {
+  background-position: 100% 0;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+  outline: none;
+  color: var(--color-charade);
+}
+.main-btn-nav.maincolor {
+  background-image: linear-gradient(to right, #07E57D, #FED365, #FAA49E);
+  color: var(--color-charade);
+}
+
 }
 
 .main-btn {
-  width: 275px;
+  width: 306px;
   font-size: 22px;
   font-weight: 700;
   color: var(--color-charade);
@@ -134,7 +163,7 @@
 
 
 .main-btn {
-  width: 225px;
+  width: 306px;
   font-size: 15px;
   height: 56px;
 }
