ca;lculator done

--- a/src/stylesheet/buttons.scss
+++ b/src/stylesheet/buttons.scss
@@ -145,6 +145,40 @@
     background-color: black;
     padding:8px 8px;
   }
+
+  .main-btn-sign {
+    width: 250px;
+    font-size: 22px;
+    font-weight: 700;
+    color: var(--color-charade);
+    cursor: pointer;
+    height: 55px;
+    text-align: center;
+    border: none;
+    background-size: 200% 100%;
+  
+    border-radius: 5px;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+  
+  .main-btn-sign:hover,
+  .main-btn-sign:focus {
+    background-position: 100% 0;
+    moz-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+    outline: none;
+    color: var(--color-charade);
+  }
+  
+  .main-btn-sign.maincolor {
+    background-image: linear-gradient(to right, #07E57D, #FED365, #FAA49E);
+    color: var(--color-charade);
+  }
   }
 
 
@@ -162,11 +196,11 @@
 }
 
 
-.main-btn {
-  width: 306px;
-  font-size: 15px;
-  height: 56px;
-}
+// .main-btn {
+//   width: 306px;
+//   font-size: 15px;
+//   height: 56px;
+// }
 
 
 
