--- a/src/stylesheet/typography.scss
+++ b/src/stylesheet/typography.scss
@@ -126,12 +126,18 @@
 .lh-34{
     line-height: 34px;
 }
+
+
 @media (max-width: 575.98px) { 
 
  }
 
 @media (max-width: 767.98px) { 
 
+    .fs-sm-16{
+        font-size: 16px;
+    }
+    
     .fs-sm-18{
         font-size: 18px;
     }
