--- a/src/stylesheet/buttons.scss
+++ b/src/stylesheet/buttons.scss
@@ -127,6 +127,7 @@
 .main-btn.maincolor {
   background-image: linear-gradient(to right, #07E57D, #FED365, #FAA49E);
   color: var(--color-charade);
+  // box-shadow: 0px 0px 20px  #07E57D;
 }
 
 // signup mobile button  page
