about us page improvements

--- a/src/stylesheet/custom.scss
+++ b/src/stylesheet/custom.scss
@@ -424,6 +424,12 @@ footer {
   }
 }
 
+.about-logo img{
+  // display: none;
+  // background-color: aquamarine;
+  width: 80%;
+}
+
 .range-progress {
   .progress {
     .progress-bar {
