--- a/src/stylesheet/custom2.scss
+++ b/src/stylesheet/custom2.scss
@@ -31,3 +31,14 @@
     };
     }
     
+    .fix-mutual-slider::before{
+        content:"Fixed Deposit" ;
+         animation: animate infinite 5s;
+    
+    }
+
+    @keyframes animate {
+        0%   {content:"Fixed Deposit" ;}
+       
+        50% {content:"Mutual Fund";}
+      }
