website-improv-changes

--- a/src/stylesheet/custom.scss
+++ b/src/stylesheet/custom.scss
@@ -241,7 +241,7 @@
         }
 
         &::after {
-          background-image: url(../assets/img/10.png);
+          background-image: url(../assets/img/down-arrow-yelow.png);
           height: 30px;
           width: 30px;
           background-color: var(--color-woodsmoke);
