--- a/src/stylesheet/custom.scss
+++ b/src/stylesheet/custom.scss
@@ -1,6 +1,7 @@
 @import "./palates";
 @import "./typography";
 @import "./buttons";
+@import "./image.scss";
 @import "./custom2.scss";
 
 .navbar {
