--- a/src/stylesheet/custom2.scss
+++ b/src/stylesheet/custom2.scss
@@ -1,35 +1,35 @@
-.main-gift-tractor{
-    top: 31rem;
-    left: 57%;
-}
+// .main-gift-tractor{
+//     top: 31rem;
+//     left: 57%;
+// }
 
-@media (max-width:1200px) {
-    .main-gift-tractor{
-        top: 36rem;
-        left: 57%;
-    }
+// @media (max-width:1200px) {
+//     .main-gift-tractor{
+//         top: 36rem;
+//         left: 57%;
+//     }
     
-}
-@media (max-width:1000px) {
-    .main-gift-tractor{
-        top: 30rem;
-        left: 61%;
-    }
+// }
+// @media (max-width:1000px) {
+//     .main-gift-tractor{
+//         top: 30rem;
+//         left: 61%;
+//     }
     
-}
-@media (max-width:750px) {
-    .main-gift-tractor{
-        top: 51rem;
-        left: 34%;
-    };
-    }
+// }
+// @media (max-width:750px) {
+//     .main-gift-tractor{
+//         top: 51rem;
+//         left: 34%;
+//     };
+//     }
     
-@media (max-width:550px) {
-    .main-gift-tractor{
-        top: 97%;
-        left: 23%;
-    };
-    }
+// @media (max-width:550px) {
+//     .main-gift-tractor{
+//         top: 97%;
+//         left: 23%;
+//     };
+//     }
     
     .fix-mutual-slider::before{
         content:"Fixed Deposit" ;
@@ -51,3 +51,31 @@
         33% {content:"Regular Payout";}
         67% {content:"Fixed Payout";}
       }
+
+
+      .swiper {
+        width: 100%;
+        height: 100%;
+      }
+      
+    //   .swiper-slide {
+    //     text-align: center;
+    //     font-size: 18px;
+    //     background: transparent;
+      
+    //     /* Center slide text vertically */
+    //     display: -webkit-box;
+    //     display: -ms-flexbox;
+    //     display: -webkit-flex;
+    //     display: flex;
+    //     -webkit-box-pack: center;
+    //     -ms-flex-pack: center;
+    //     -webkit-justify-content: center;
+    //     justify-content: center;
+    //     -webkit-box-align: center;
+    //     -ms-flex-align: center;
+    //     -webkit-align-items: center;
+    //     align-items: center;
+    //   }
+      
+   
