--- a/src/stylesheet/custom2.scss
+++ b/src/stylesheet/custom2.scss
@@ -78,4 +78,11 @@
     //     align-items: center;
     //   }
       
-   
+   .bargraph{
+    .card{
+      .card-body{
+        border-left: 3px solid white;
+        border-bottom: 3px solid white;
+      }
+    }
+   }
