--- a/src/stylesheet/custom2.scss
+++ b/src/stylesheet/custom2.scss
@@ -8,14 +8,14 @@
 //         top: 36rem;
 //         left: 57%;
 //     }
-    
+
 // }
 // @media (max-width:1000px) {
 //     .main-gift-tractor{
 //         top: 30rem;
 //         left: 61%;
 //     }
-    
+
 // }
 // @media (max-width:750px) {
 //     .main-gift-tractor{
@@ -23,66 +23,139 @@
 //         left: 34%;
 //     };
 //     }
-    
+
 // @media (max-width:550px) {
 //     .main-gift-tractor{
 //         top: 97%;
 //         left: 23%;
 //     };
 //     }
-    
-    .fix-mutual-slider::before{
-        content:"Fixed Deposit" ;
-         animation: mutu-fix infinite 9s;
-    
-    }
-    .tax-reguler-fix::before{
-        content:"Tax Free" ;
-         animation: tax  infinite 6s;
-    }
-    @keyframes mutu-fix {
-        0%   {content:"Fixed Deposit" ;}
-       
-        50% {content:"Mutual Fund";}
-      }
-    @keyframes tax {
-        0%   {content:"Tax Free" ;}
-       
-        33% {content:"Regular Payout";}
-        67% {content:"Fixed Payout";}
-      }
+
+.fix-mutual-slider::before {
+  content: "Fixed Deposit";
+  animation: mutu-fix infinite 9s;
+
+}
+
+.tax-reguler-fix::before {
+  content: "Tax Free";
+  animation: tax infinite 6s;
+}
+
+@keyframes mutu-fix {
+  0% {
+    content: "Fixed Deposit";
+  }
+
+  50% {
+    content: "Mutual Fund";
+  }
+}
+
+@keyframes tax {
+  0% {
+    content: "Tax Free";
+  }
+
+  33% {
+    content: "Regular Payout";
+  }
+
+  67% {
+    content: "Fixed Payout";
+  }
+}
 
 
-      .swiper {
-        width: 100%;
-        height: 100%;
-      }
-      
-    //   .swiper-slide {
-    //     text-align: center;
-    //     font-size: 18px;
-    //     background: transparent;
-      
-    //     /* Center slide text vertically */
-    //     display: -webkit-box;
-    //     display: -ms-flexbox;
-    //     display: -webkit-flex;
-    //     display: flex;
-    //     -webkit-box-pack: center;
-    //     -ms-flex-pack: center;
-    //     -webkit-justify-content: center;
-    //     justify-content: center;
-    //     -webkit-box-align: center;
-    //     -ms-flex-align: center;
-    //     -webkit-align-items: center;
-    //     align-items: center;
-    //   }
-      
-   .bargraph{
-    .card{
-      .card-body{
-        border-left: 3px solid white;
-        border-bottom: 3px solid white;
-      }
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+//   .swiper-slide {
+//     text-align: center;
+//     font-size: 18px;
+//     background: transparent;
+
+//     /* Center slide text vertically */
+//     display: -webkit-box;
+//     display: -ms-flexbox;
+//     display: -webkit-flex;
+//     display: flex;
+//     -webkit-box-pack: center;
+//     -ms-flex-pack: center;
+//     -webkit-justify-content: center;
+//     justify-content: center;
+//     -webkit-box-align: center;
+//     -ms-flex-align: center;
+//     -webkit-align-items: center;
+//     align-items: center;
+//   }
+
+.bargraph {
+  .card {
+    .card-body {
+      border-left: 3px solid white;
+      border-bottom: 3px solid white;
     }
-   }
+  }
+}
+
+
+.Service-Card {
+  .card-header {
+    border-bottom: 2px solid var(--bs-card-border-color);
+  }
+
+  .colan-icon {
+    height: 40px;
+    width: 40px;
+    // background-color: white;
+    // background-color: var(--color-woodsmoke);
+    box-shadow: -5.89397px -5.89397px 17.6819px #3b4451,
+      5.89397px 5.89397px 17.6819px #000000;
+    border-radius: 50%;
+    z-index: 999;
+  }
+
+  .swiper-button-prev{
+    left: 10%
+  }
+  .swiper-button-next{
+    right: 10%
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    top: 94% !important;
+    height: 40px;
+    width: 40px;
+    background-color: var(--color-woodsmoke);
+    box-shadow: 0px 0px 8px 3px #3b4451;
+    border-radius: 50%;
+    background-position: 8px 10px;
+    background-size: 15px;
+   
+    z-index: 11;
+  }
+
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    color:var( --color-sunglow);
+    font-size: 1rem;
+    font-weight: 600;
+    z-index: 11;
+  }
+
+  .swiper-pagination-bullet{
+    background-color: white;
+    background: white;
+  }
+  .swiper-pagination-bullet-active{
+    background-color: white;
+    background:var(--color-main-green);
+  }
+
+
+
+}
