--- a/src/stylesheet/style.scss
+++ b/src/stylesheet/style.scss
@@ -1,3 +1,4 @@
 @import "~slick-carousel/slick/slick.css"; 
 @import "~slick-carousel/slick/slick-theme.css";
 @import 'custom';
+@import 'swiper/css';
