--- a/src/stylesheet/custom2.scss
+++ b/src/stylesheet/custom2.scss
@@ -92,14 +92,14 @@
 //     align-items: center;
 //   }
 
-.bargraph {
-  .card {
-    .card-body {
-      border-left: 3px solid white;
-      border-bottom: 3px solid white;
-    }
-  }
-}
+// .bargraph {
+//   .card {
+//     .card-body {
+//       border-left: 3px solid white;
+//       border-bottom: 3px solid white;
+//     }
+//   }
+// }
 
 
 .Service-Card {
